src/objects/aci_Inspect_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Code_Fragment__c</fullName>
        <label>Code Fragment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Line__c</fullName>
        <label>End Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspect_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspect Result</label>
        <referenceTo>aci_Inspect_Result__c</referenceTo>
        <relationshipLabel>Details</relationshipLabel>
        <relationshipName>Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lines__c</fullName>
        <label>Lines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Line__c</fullName>
        <label>Start Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inspect Detail</label>
    <nameField>
        <label>Inspect Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>